# leon-radars

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  pyproject.toml  requirements.txt
leon_radars/: __main__.py
leon_radars/config_parser/: config_parser.py  helpers.py
leon_radars/message/: message_builder.py  message_sender.py
leon_radars/radar_scraper/: helpers.py  radar_scraper.py
leon_radars/utils/: logger.py  schemas.py
leon_speedcams/config_parser/: helpers.py
leon_speedcams/message/: message_sender.py
leon_speedcams/radar_scraper/: radar_scraper.py
leon_speedcams/utils/: schemas.py  session_with_user_agent.py
tests/: test_config_parser.py
