[tool.poetry]
name = "leon-speedcams"
version = "2.0.0"
description = "A python project to scrape the location of speedcams in León, Spain"
authors = ["dmarts05 <dmarts05@estudiantes.unileon.es>"]
readme = "README.md"
packages = [{include = "leon_speedcams"}]

[tool.poetry.scripts]
leon-speedcams = "leon_speedcams.__main__:main"

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
fake-useragent = "^1.4.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.4"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240106"
types-beautifulsoup4 = "^4.12.0.20240106"
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
